--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,120 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* general */
+body {
+    background-color: black;
+    background-image: linear-gradient(to left top, #382d3f, #30283a, #282334, #201e2f, #181929, #181828, #171728, #171627, #1e182b, #261a2e, #2e1c30, #361e32);
+    background-attachment: fixed;
+    @apply font-mono text-2xl text-white
+}
+
+/* flip */
+@keyframes flip {
+    0% {
+       transform: perspective(400px) rotateX(90deg); 
+       opacity: 0;
+    }
+    40% {
+       transform: perspective(400px) rotateX(-10deg);
+    }
+    70% {
+       transform: perspective(400px) rotateX(10deg);
+    }
+    100% {
+       transform: perspective(400px) rotateX(0deg);
+       opacity: 1;
+    }
+}
+ 
+.flip {
+    animation-name: flip;
+    animation-duration: 1000ms;
+    animation-fill-mode: forwards;
+}
+
+/* glitch */
+@keyframes glitch{
+    2%,64%{
+      transform: translate(2px,0) skew(0deg);
+    }
+    4%,60%{
+      transform: translate(-2px,0) skew(0deg);
+    }
+    62%{
+      transform: translate(0,0) skew(5deg); 
+    }
+}
+
+@keyframes glitchTop{
+    2%,64%{
+      transform: translate(2px,-2px);
+    }
+    4%,60%{
+      transform: translate(-2px,2px);
+    }
+    62%{
+      transform: translate(13px,-1px) skew(-13deg); 
+    }
+}
+
+@keyframes glitchBotom{
+    2%,64%{
+      transform: translate(-2px,0);
+    }
+    4%,60%{
+      transform: translate(-2px,0);
+    }
+    62%{
+      transform: translate(-22px,5px) skew(21deg); 
+    }
+}
+
+.glitch {
+    animation: glitch 1s linear infinite;
+    z-index: 20;
+}
+
+.glitch:before,
+.glitch:after{
+    content: attr(title);
+    position: absolute;
+    left: 0;
+}
+
+.glitch:before{
+    position: absolute;
+    color: cyan;
+    z-index: -1;
+    animation: glitchTop 1s linear infinite;
+    clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+}
+
+.glitch:after{
+    position: absolute;
+    color: #c800ff;
+    z-index: -1;
+    animation: glitchBotom 1.5s linear infinite;
+    clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+    -webkit-clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+}
+
+/* feade in */
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        scale: 0.9;
+    }
+    100% {
+        opacity: 1;
+        scale: 1;
+    }
+}
+
+.fade-in {
+    animation-name: fadeIn;
+    animation-duration: 1000ms;
+    animation-fill-mode: forwards;
+}
